# RISC-V-interpret

./: CMakeLists.txt  README.md  common.h  main.c
execution/: execution.c  execution.h  physmemory.h
interpret/: interpret.c  interpret.h
programs/factorial/: factorial.s
programs/sum/: sum.s
transfer/: input.s
